fix(workflow): invoice purchased orders directly
